# template-ubuntu-python-blank

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
